# AT-ST

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: config_syntax.md
src/: analyses.rs  config.rs  lib.rs  main.rs  modules.rs  test_case.rs
tests/: test_defs.rs
tests/projects/arg_stdin_stdout/: config.yaml  expected-scores
tests/projects/arg_stdin_stdout/xeachword/: proj.c
tests/projects/arg_stdin_stdout/xideal/: proj.c
tests/projects/arg_stdin_stdout/xoneline/: proj.c
tests/test_generator/: Cargo.toml
tests/test_generator/src/: lib.rs
