[package]
name = "atst"
version = "0.1.0"
authors = ["Viktor Malik <viktor.malik@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "*"
regex = "*"
structopt = "*"
tempfile = "*"
thiserror = "*"
yaml-rust = "*"
wait-timeout = "*"

[dev-dependencies]
test_generator = { path = "tests/test_generator" }